--- a/Chargebee_Log_Analysis.ipynb
+++ b/Chargebee_Log_Analysis.ipynb
@@ -1002,11 +1002,12 @@
         "            df.columns = ['_'.join([str(c) for c in col]).strip() for col in df.columns.values]\n",
         "            \n",
         "        header = df.columns.tolist()\n",
-        "        data = df.fillna('').astype(str).values.tolist()\n",
+        "        # Use None for NaNs to preserve numeric types while allowing empty cells\n",
+        "        data = df.where(pd.notnull(df), None).values.tolist()\n",
         "        \n",
         "        # Write Header and Data starting at Row 2\n",
         "        data_cell = rowcol_to_a1(2, curr_col)\n",
-        "        ws.update(range_name=data_cell, values=[header] + data)\n",
+        "        ws.update(range_name=data_cell, values=[header] + data, value_input_option='USER_ENTERED')\n",
         "        \n",
         "        # Move to next starting column: width of current DF + 1 empty column\n",
         "        curr_col += len(df.columns) + 1\n",
