--- a/Chargebee_Log_Analysis.ipynb
+++ b/Chargebee_Log_Analysis.ipynb
@@ -1001,7 +1001,12 @@
         "        if isinstance(df.columns, pd.MultiIndex):\n",
         "            df.columns = ['_'.join([str(c) for c in col]).strip() for col in df.columns.values]\n",
         "            \n",
-        "        header = df.columns.tolist()\n",
+        "        # Convert datetimes to simple strings (m/d/yy) for better chart display\n",
+        "        for col in df.columns:\n",
+        "            if pd.api.types.is_datetime64_any_dtype(df[col]):\n",
+        "                df[col] = df[col].dt.strftime('%m/%d/%y')\n",
+        "                \n",
+        "        header = [str(col) for col in df.columns.tolist()]\n",
         "        # Use None for NaNs to preserve numeric types while allowing empty cells\n",
         "        data = df.where(pd.notnull(df), None).values.tolist()\n",
         "        \n",
