--- a/Chargebee_Log_Analysis.ipynb
+++ b/Chargebee_Log_Analysis.ipynb
@@ -33,10 +33,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 46,
       "metadata": {
         "id": "rFP9TCUHM1IC",
-        "outputId": "f3f0c392-19b2-4102-9842-8d58c7742211",
+        "outputId": "4eb2c9e8-4ed1-48b5-8497-5c0e472daabd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -124,10 +124,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 47,
       "metadata": {
         "id": "XJJA7e7eM1ID",
-        "outputId": "a0041d1a-95f8-47e8-b76c-9ef2dd08b4df",
+        "outputId": "d78f941c-c339-4458-a129-bc3ac2cf284a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -213,10 +213,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 48,
       "metadata": {
         "id": "Wo8eTlaGM1IE",
-        "outputId": "63be63f6-71ea-4141-ebec-edd137c9aa14",
+        "outputId": "63d5af0e-513e-41c4-fca7-b3b38b5580f3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -301,10 +301,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 49,
       "metadata": {
         "id": "dC7qywJ-M1IF",
-        "outputId": "6610f05e-541e-4bbb-c400-7ca517a78f07",
+        "outputId": "ca47877f-22a2-4fa3-c68c-11d9fe3261d1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -390,10 +390,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 50,
       "metadata": {
         "id": "DLDEZLKaM1IF",
-        "outputId": "08254e6b-860d-4e17-c978-a07d7b095629",
+        "outputId": "1f3f0282-b91d-4aea-b843-e5d96568f1d5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 669
@@ -436,10 +436,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 51,
       "metadata": {
         "id": "38aFaruhM1IG",
-        "outputId": "d286013b-bee0-441a-cc70-245eaaa11a41",
+        "outputId": "b9577cd4-cf1a-4849-a256-39b32e17251f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 363
@@ -500,7 +500,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b5376631-f407-44c0-a5b0-ba0e33a27fe7\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-85516ab2-c617-4cb8-a6c1-28f9c71f68f8\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -657,7 +657,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b5376631-f407-44c0-a5b0-ba0e33a27fe7')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-85516ab2-c617-4cb8-a6c1-28f9c71f68f8')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -709,12 +709,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-b5376631-f407-44c0-a5b0-ba0e33a27fe7 button.colab-df-convert');\n",
+              "        document.querySelector('#df-85516ab2-c617-4cb8-a6c1-28f9c71f68f8 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-b5376631-f407-44c0-a5b0-ba0e33a27fe7');\n",
+              "        const element = document.querySelector('#df-85516ab2-c617-4cb8-a6c1-28f9c71f68f8');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -793,10 +793,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 52,
       "metadata": {
         "id": "jIIex0MUM1IG",
-        "outputId": "0cc417e4-d73d-460f-d470-c868e551c154",
+        "outputId": "f9fa1a99-6281-4454-8211-5603cff1ac94",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 677
@@ -837,10 +837,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 53,
       "metadata": {
         "id": "3boSHrSkM1IG",
-        "outputId": "93fc67f3-1732-4b50-fae6-9639b8147c7b",
+        "outputId": "2abccd40-1539-4fe5-a516-39c92116ebc0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -912,13 +912,13 @@
       ],
       "metadata": {
         "id": "DDQsNjVhvmGB",
-        "outputId": "c6144aad-13e1-4416-8c4f-7717fa31be0c",
+        "outputId": "3c3d3a5e-b112-49e5-dfa4-53a94d53df36",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 745
         }
       },
-      "execution_count": 56,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "display_data",
@@ -937,7 +937,7 @@
       "execution_count": 55,
       "metadata": {
         "id": "8HEDRpyuM1IH",
-        "outputId": "3da55e49-b599-46a7-fc66-5d731486bb8c",
+        "outputId": "e0e6ddad-63ad-4088-c718-a269eed20bd8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -945,25 +945,9 @@
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/tmp/ipython-input-486377795.py:15: DeprecationWarning: The order of arguments in worksheet.update() has changed. Please pass values first and range_name secondor used named arguments (range_name=, values=)\n",
-            "  ws_trap.update('A1', [spider_traps_df.columns.values.tolist()] + spider_traps_df.fillna('').values.tolist())\n"
-          ]
-        },
-        {
-          "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Results exported successfully! URL: https://docs.google.com/spreadsheets/d/1Aw_W_2BsyrDx-aLaBKi6qWBYjAaXvNWggaduqzI8Aes\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/tmp/ipython-input-486377795.py:21: DeprecationWarning: The order of arguments in worksheet.update() has changed. Please pass values first and range_name secondor used named arguments (range_name=, values=)\n",
-            "  ws_status.update('A1', [status_flat.columns.values.tolist()] + status_flat.fillna('').values.tolist())\n"
+            "All datasets exported successfully! URL: https://docs.google.com/spreadsheets/d/1Aw_W_2BsyrDx-aLaBKi6qWBYjAaXvNWggaduqzI8Aes\n"
           ]
         }
       ],
@@ -979,11 +963,11 @@
         "        sh = gc_sheet.create(OUTPUT_SHEET_NAME)\n",
         "\n",
         "    timestamp = datetime.now().strftime(\"%m/%d %H:%M\")\n",
-        "    \n",
+        "\n",
         "    # Create a new worksheet for this consolidated run\n",
         "    # Increased columns to 100 for horizontal arrangement\n",
         "    ws = sh.add_worksheet(title=f\"Analysis {timestamp}\", rows=2000, cols=100)\n",
-        "    \n",
+        "\n",
         "    curr_col = 1\n",
         "    for title, df in dataset_list:\n",
         "        if df is None:\n",
@@ -992,28 +976,34 @@
         "            df = df.reset_index()\n",
         "        if df.empty:\n",
         "            continue\n",
-        "            \n",
+        "\n",
         "        # Write Title at Row 1\n",
         "        title_cell = rowcol_to_a1(1, curr_col)\n",
         "        ws.update(range_name=title_cell, values=[[title]])\n",
-        "        \n",
+        "\n",
         "        # Prepare Header and Data\n",
         "        if isinstance(df.columns, pd.MultiIndex):\n",
         "            df.columns = ['_'.join([str(c) for c in col]).strip() for col in df.columns.values]\n",
-        "            \n",
+        "\n",
         "        # Convert datetimes to simple strings (m/d/yy) for better chart display\n",
+        "        # Also convert any lists or dictionaries to string representations\n",
         "        for col in df.columns:\n",
         "            if pd.api.types.is_datetime64_any_dtype(df[col]):\n",
         "                df[col] = df[col].dt.strftime('%m/%d/%y')\n",
-        "                \n",
-        "        header = [str(col) for col in df.columns.tolist()]\n",
+        "            # Check if any element in the column is a list or dictionary\n",
+        "            # and convert the entire column to string type if so.\n",
+        "            elif df[col].apply(lambda x: isinstance(x, (list, dict))).any():\n",
+        "                df[col] = df[col].astype(str)\n",
+        "\n",
+        "\n",
+        "        header = [f\"'{col}\" for col in df.columns.tolist()]\n",
         "        # Use None for NaNs to preserve numeric types while allowing empty cells\n",
         "        data = df.where(pd.notnull(df), None).values.tolist()\n",
-        "        \n",
+        "\n",
         "        # Write Header and Data starting at Row 2\n",
         "        data_cell = rowcol_to_a1(2, curr_col)\n",
         "        ws.update(range_name=data_cell, values=[header] + data, value_input_option='USER_ENTERED')\n",
-        "        \n",
+        "\n",
         "        # Move to next starting column: width of current DF + 1 empty column\n",
         "        curr_col += len(df.columns) + 1\n",
         "\n",
