--- a/Chargebee_Log_Analysis.ipynb
+++ b/Chargebee_Log_Analysis.ipynb
@@ -173,6 +173,8 @@
         "        return pd.DataFrame()\n",
         "\n",
         "    googlebot_data = []\n",
+        "    rows_kept = 0\n",
+        "    total_rows_processed = 0\n",
         "\n",
         "    # Columns we actually need to save memory\n",
         "    use_cols = ['_time', 'useragent', 'uri_path', 'uri_query', 'status', 'bytes_sent', 'clientip', 'method']\n",
@@ -182,8 +184,10 @@
         "        try:\n",
         "            # Read in chunks to avoid OOM\n",
         "            for chunk in pd.read_csv(file, usecols=use_cols, chunksize=chunk_size, low_memory=False):\n",
+        "                total_rows_processed += len(chunk)\n",
         "                # Filter for Googlebot (case-insensitive)\n",
         "                filtered_chunk = chunk[chunk['useragent'].str.contains(\"google\", case=False, na=False)].copy()\n",
+        "                rows_kept += len(filtered_chunk)\n",
         "                googlebot_data.append(filtered_chunk)\n",
         "\n",
         "                # Aggressive garbage collection\n",
